k8s/mediaserver/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: mediaserver
  # annotations:
  #   metallb.universe.tf/loadBalancerIPs: 192.168.100.234
spec:
  type: LoadBalancer
  selector:
    app: navidrome
  ports:
    - port: 4533
